# glyphcomposer

./: .gitignore  README.md  README.zh-CN.md  app.py  pyproject.toml  requirements.txt
assets/: decompositions_sample.csv  oov_image_samples_template.csv
configs/: baseline.yaml  diffusion.yaml  oov_lora.yaml  probe.yaml  vae.yaml
docs/: 目录结构说明.md
docs/thesis/: 写作去AI味提示.md  新对话交接记忆.md  硕士开题报告.md
docs/thesis/ppt/: generate_proposal_drawio.py  narrative_plan.md  proposal-defense-classic-clean.pptx  proposal-defense-classic-notes.pptx  proposal-defense-classic.drawio  speaker_notes.json
docs/thesis/proppsal/: ~$报告书_v2.docx  开题报告书_v2.docx
scripts/: build_dataset.py  evaluate.py  infer.py  prepare_oov_dataset.py  run_demo.py  train_baseline.py  train_diffusion.py  train_oov_lora.py  train_structure_probe.py  train_vae.py
src/glyphgen/: __init__.py  config.py  inference.py  runtime.py  structures.py  types.py
src/glyphgen/data/: __init__.py  dataset.py  decomposition.py  manifests.py  render.py
src/glyphgen/eval/: __init__.py  metrics.py  probe.py
src/glyphgen/models/: __init__.py  baseline.py  components.py  diffusion.py  lora.py  vae.py
src/glyphgen/training/: __init__.py  checkpoints.py  losses.py
src/glyphgen/utils/: __init__.py  io.py  seed.py
tests/: test_decomposition.py  test_decompositions.py  test_forward.py  test_structures.py
